service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-services
spec:
  selector:
    app: nginx-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
