ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: kube-public
  annotations:
    nginx.ingress.kubernetes.io/load-balance: round_robin
spec:
  ingressClassName: nginx-app
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app-service
                port:
                  number: 80
